add service, fix swagger docks, fix bugs
