# UserService/main.go
@@ -6,7 +6,7 @@ import (
 	"net/http"
 	"strconv"
 
-	docs "marketplace/docs"
+	docs "user_service/docs"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -17,6 +17,20 @@ import (
 
 var connStr string = "user=postgres password=password dbname=marketplace-users-db sslmode=disable"
 
+type IUserService interface {
+	GetUsers() ([]UserDto, error)
+	GetUserById(id string) (*UserDto, error)
+	AddUser(u *User) (*UserDto, error)
+	UpdateUser(u *UpdateUserDto) (*UserDto, error)
+	DeleteUser(id string) error
+	WalletReplenishment(id string, money int) (*UserDto, error)
+	SpendMoney(id string, money int) (*UserDto, error)
+}
+
+var Service IUserService
+
+type UserService struct{}
+
 type User struct {
 	Id       string `json:"id"`
 	Name     string `json:"name"`
@@ -26,8 +40,38 @@ type User struct {
 	Role     string `json:"role"`
 }
 
+type UpdateUserDto struct {
+	Id    string `json:"id"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+	Role  string `json:"role"`
+}
+
+type UserDto struct {
+	Id     string `json:"id"`
+	Name   string `json:"name"`
+	Email  string `json:"email"`
+	Wallet int    `json:"wallet"`
+	Role   string `json:"role"`
+}
+
+type UserDtoAdapter interface {
+	GetUserDto() UserDto
+}
+
+func (user *User) GetUserDto() UserDto {
+	return UserDto{
+		Id:     user.Id,
+		Name:   user.Name,
+		Email:  user.Email,
+		Wallet: user.Wallet,
+		Role:   user.Role,
+	}
+}
+
 func main() {
 	fmt.Println("Hello blya")
+	Service = UserService{}
 	createGin()
 }
 
@@ -59,6 +103,178 @@ func createGin() {
 	r.Run(":8080")
 }
 
+func (service UserService) GetUsers() ([]UserDto, error) {
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		return nil, err
+	}
+	defer db.Close()
+
+	rows, err := db.Query("SELECT * FROM public.\"Users\"")
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+
+	users := []UserDto{}
+	for rows.Next() {
+		u := User{}
+		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
+		if err != nil {
+			fmt.Println(err)
+			continue
+		}
+		users = append(users, u.GetUserDto())
+	}
+	return users, nil
+}
+
+func (service UserService) GetUserById(id string) (*UserDto, error) {
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		return nil, err
+	}
+	defer db.Close()
+
+	query := fmt.Sprintf("SELECT * FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
+	rows, err := db.Query(query)
+	if err != nil {
+		return nil, err
+	}
+
+	u := User{}
+	for rows.Next() {
+		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
+		if err != nil {
+			fmt.Println(err)
+			continue
+		}
+	}
+	userDto := u.GetUserDto()
+	return &userDto, nil
+}
+
+func (service UserService) AddUser(u *User) (*UserDto, error) {
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		return nil, err
+	}
+	defer db.Close()
+
+	newId := uuid.New()
+	u.Id = fmt.Sprintf("%s", newId)
+	query := fmt.Sprintf("INSERT INTO public.\"Users\" (\"Id\", \"Name\", \"Email\", \"Password\", \"Wallet\", \"Role\") VALUES ('%s','%s', '%s', '%s', %d, '%s')",
+		u.Id, u.Name, u.Email, u.Password, u.Wallet, u.Role)
+	_, err = db.Exec(query)
+	if err != nil {
+		return nil, err
+	}
+	userDto := u.GetUserDto()
+	return &userDto, nil
+}
+func (service UserService) UpdateUser(u *UpdateUserDto) (*UserDto, error) {
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		return nil, err
+	}
+	defer db.Close()
+
+	query := fmt.Sprintf("UPDATE public.\"Users\" SET \"Name\" = '%s', \"Email\" = '%s', \"Role\" = '%s' WHERE \"Id\" = '%s'",
+		u.Name, u.Email, u.Role, u.Id)
+	_, err = db.Exec(query)
+	if err != nil {
+		return nil, err
+	}
+
+	userDto, err := service.GetUserById(u.Id)
+	if err != nil {
+		return userDto, err
+	}
+	return userDto, nil
+}
+func (service UserService) DeleteUser(id string) error {
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		return err
+	}
+	defer db.Close()
+
+	query := fmt.Sprintf("DELETE FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
+	_, err = db.Exec(query)
+	if err != nil {
+		return err
+	}
+	return nil
+}
+func (service UserService) WalletReplenishment(id string, money int) (*UserDto, error) {
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		return nil, err
+	}
+	defer db.Close()
+
+	getQuery := fmt.Sprintf("SELECT * FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
+	rows, err := db.Query(getQuery)
+	if err != nil {
+		return nil, err
+	}
+
+	u := User{}
+	for rows.Next() {
+		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
+		if err != nil {
+			fmt.Println(err)
+			continue
+		}
+	}
+
+	query := fmt.Sprintf("UPDATE public.\"Users\" SET \"Wallet\" = %d", u.Wallet+money)
+	_, err = db.Exec(query)
+	if err != nil {
+		return nil, err
+	}
+
+	userDto, err := service.GetUserById(id)
+	if err != nil {
+		return nil, err
+	}
+	return userDto, nil
+}
+func (service UserService) SpendMoney(id string, money int) (*UserDto, error) {
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		return nil, err
+	}
+	defer db.Close()
+
+	getQuery := fmt.Sprintf("SELECT * FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
+	rows, err := db.Query(getQuery)
+	if err != nil {
+		return nil, err
+	}
+
+	u := User{}
+	for rows.Next() {
+		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
+		if err != nil {
+			fmt.Println(err)
+			continue
+		}
+	}
+
+	query := fmt.Sprintf("UPDATE public.\"Users\" SET \"Wallet\" = %d", u.Wallet-money)
+	_, err = db.Exec(query)
+	if err != nil {
+		return nil, err
+	}
+
+	userDto, err := service.GetUserById(id)
+	if err != nil {
+		return nil, err
+	}
+	return userDto, nil
+}
+
 // @BasePath /api
 // @Summary ping example
 // @Schemes
@@ -82,29 +298,12 @@ func TestApi(ctx *gin.Context) {
 // @Success 200 {string} idk_WTF
 // @Router /user-service/get-all [get]
 func GetUsers(ctx *gin.Context) {
-	db, err := sql.Open("postgres", connStr)
+
+	service := UserService{}
+	users, err := service.GetUsers()
 	if err != nil {
-		panic(err)
+		ctx.JSON(http.StatusBadRequest, err)
 	}
-	defer db.Close()
-
-	rows, err := db.Query("SELECT * FROM public.\"Users\"")
-	if err != nil {
-		panic(err)
-	}
-	defer rows.Close()
-
-	users := []User{}
-	for rows.Next() {
-		u := User{}
-		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
-		if err != nil {
-			fmt.Println(err)
-			continue
-		}
-		users = append(users, u)
-	}
-
 	ctx.JSON(http.StatusOK, users)
 }
 
@@ -118,26 +317,9 @@ func GetUsers(ctx *gin.Context) {
 // @Router /user-service/{id} [get]
 func GetUserById(ctx *gin.Context) {
 	id := ctx.Param("id")
-
-	db, err := sql.Open("postgres", connStr)
+	u, err := Service.GetUserById(id)
 	if err != nil {
-		panic(err)
-	}
-	defer db.Close()
-
-	query := fmt.Sprintf("SELECT * FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
-	rows, err := db.Query(query)
-	if err != nil {
-		panic(err)
-	}
-
-	u := User{}
-	for rows.Next() {
-		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
-		if err != nil {
-			fmt.Println(err)
-			continue
-		}
+		ctx.JSON(http.StatusBadRequest, err)
 	}
 	ctx.JSON(http.StatusOK, u)
 }
@@ -147,6 +329,7 @@ func GetUserById(ctx *gin.Context) {
 // @Tags user-service
 // @Accept json
 // @Produce json
+// @Param user	body	User	true	"User data"
 // @Success 200 {string} idk_WTF
 // @Router /user-service/ [PUT]
 func AddUser(ctx *gin.Context) {
@@ -156,22 +339,11 @@ func AddUser(ctx *gin.Context) {
 		return
 	}
 
-	db, err := sql.Open("postgres", connStr)
+	u, err := Service.AddUser(&user)
 	if err != nil {
-		panic(err)
+		ctx.JSON(http.StatusBadRequest, err)
 	}
-	defer db.Close()
-
-	newId := uuid.New()
-	user.Id = fmt.Sprintf("%s", newId)
-	query := fmt.Sprintf("INSERT INTO public.\"Users\" (\"Id\", \"Name\", \"Email\", \"Password\", \"Wallet\", \"Role\") VALUES ('%s','%s', '%s', '%s', %d, '%s')",
-		user.Id, user.Name, user.Email, user.Password, user.Wallet, user.Role)
-	_, err = db.Exec(query)
-	if err != nil {
-		panic(err)
-	}
-
-	ctx.JSON(http.StatusOK, user)
+	ctx.JSON(http.StatusOK, u)
 }
 
 // @BasePath /api
@@ -179,29 +351,21 @@ func AddUser(ctx *gin.Context) {
 // @Tags user-service
 // @Accept json
 // @Produce json
+// @Param user	body	UpdateUserDto	true	"User data"
 // @Success 200 {string} idk_WTF
 // @Router /user-service/ [PATCH]
 func UpdateUser(ctx *gin.Context) {
-	var user User
+	var user UpdateUserDto
 	if err := ctx.ShouldBindJSON(&user); err != nil {
 		ctx.JSON(http.StatusBadRequest, err)
 		return
 	}
 
-	db, err := sql.Open("postgres", connStr)
+	u, err := Service.UpdateUser(&user)
 	if err != nil {
-		panic(err)
+		ctx.JSON(http.StatusBadRequest, err)
 	}
-	defer db.Close()
-
-	query := fmt.Sprintf("UPDATE public.\"Users\" SET \"Name\" = '%s', \"Email\" = '%s', \"Password\" = '%s', \"Wallet\" = %d, \"Role\" = '%s'",
-		user.Name, user.Email, user.Password, user.Wallet, user.Role)
-	_, err = db.Exec(query)
-	if err != nil {
-		panic(err)
-	}
-
-	ctx.JSON(http.StatusOK, user)
+	ctx.JSON(http.StatusOK, u)
 }
 
 // @BasePath /api
@@ -215,19 +379,11 @@ func UpdateUser(ctx *gin.Context) {
 func DeleteUser(ctx *gin.Context) {
 	id := ctx.Param("id")
 
-	db, err := sql.Open("postgres", connStr)
+	err := Service.DeleteUser(id)
 	if err != nil {
-		panic(err)
+		ctx.JSON(http.StatusBadRequest, err)
 	}
-	defer db.Close()
-
-	query := fmt.Sprintf("DELETE FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
-	_, err = db.Exec(query)
-	if err != nil {
-		panic(err)
-	}
-
-	ctx.JSON(http.StatusOK, "")
+	ctx.JSON(http.StatusOK, "Successfuly deleted")
 }
 
 // @BasePath /api
@@ -241,36 +397,15 @@ func DeleteUser(ctx *gin.Context) {
 func WalletReplenishment(ctx *gin.Context) {
 	id := ctx.Query("id")
 	money, err := strconv.Atoi(ctx.Query("money"))
-
-	db, err := sql.Open("postgres", connStr)
 	if err != nil {
-		panic(err)
+		ctx.JSON(http.StatusBadRequest, err)
 	}
-	defer db.Close()
 
-	getQuery := fmt.Sprintf("SELECT * FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
-	rows, err := db.Query(getQuery)
+	u, err := Service.WalletReplenishment(id, money)
 	if err != nil {
-		panic(err)
+		ctx.JSON(http.StatusBadRequest, err)
 	}
-
-	u := User{}
-	for rows.Next() {
-		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
-		if err != nil {
-			fmt.Println(err)
-			continue
-		}
-	}
-
-	query := fmt.Sprintf("UPDATE public.\"Users\" SET \"Wallet\" = %d", u.Wallet+money)
-	_, err = db.Exec(query)
-	if err != nil {
-		panic(err)
-	}
-
-	result := fmt.Sprintf("wallet before: %d, wallet after: %d", u.Wallet, u.Wallet+money)
-	ctx.JSON(http.StatusOK, result)
+	ctx.JSON(http.StatusOK, u)
 }
 
 // @BasePath /api
@@ -285,33 +420,9 @@ func SpendMoney(ctx *gin.Context) {
 	id := ctx.Query("id")
 	money, err := strconv.Atoi(ctx.Query("money"))
 
-	db, err := sql.Open("postgres", connStr)
+	u, err := Service.SpendMoney(id, money)
 	if err != nil {
-		panic(err)
+		ctx.JSON(http.StatusBadRequest, err)
 	}
-	defer db.Close()
-
-	getQuery := fmt.Sprintf("SELECT * FROM public.\"Users\" WHERE \"Id\" = '%s'", id)
-	rows, err := db.Query(getQuery)
-	if err != nil {
-		panic(err)
-	}
-
-	u := User{}
-	for rows.Next() {
-		err := rows.Scan(&u.Id, &u.Name, &u.Email, &u.Password, &u.Wallet, &u.Role)
-		if err != nil {
-			fmt.Println(err)
-			continue
-		}
-	}
-
-	query := fmt.Sprintf("UPDATE public.\"Users\" SET \"Wallet\" = %d", u.Wallet-money)
-	_, err = db.Exec(query)
-	if err != nil {
-		panic(err)
-	}
-
-	result := fmt.Sprintf("wallet before: %d, wallet after: %d", u.Wallet, u.Wallet-money)
-	ctx.JSON(http.StatusOK, result)
+	ctx.JSON(http.StatusOK, u)
 }
